--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div style="display:flex;justify-content:center;">
 
 
-							<a href="https://www.github.com/bigdaddytwochinz"
+							<a href="https://www.github.com/achinth-b"
 							style="padding:35px">
 								  <img
 							  	src="assets/github-icon.png"
