--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 					<section>
 						<p>
-							Hi! I'm Achinth, a nineteen-year-old sophomore at the University
+							Hi! I'm Achinth, a nineteen-year-old rising junior at the University
 							 of British Columbia studying computer science and statistics.
 							 I'm also an intern with Boeing in my hometown, Vancouver!
 						</p>
