--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</a>
 
 
-							<a href="https://www.linkedin.com/in/achinthnb"
+							<a href="https://www.linkedin.com/in/achinthb"
 							style="padding:35px">
 									  <img
 								  	src="assets/linkedin-icon.png"
