changed to comply with new ubc student email

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<p> and if you ever need to reach me: </p>
 						<div style="display:flex;justify-content:center;">
 
-							<a href="mailto:achinth@alumni.ubc.ca?Subject=Hi%20Achinth!"
+							<a href="mailto:achinth@student.ubc.ca?Subject=Hi%20Achinth!"
 							style="padding:35px">
 								<img
 								src="assets/mail-icon.png"
