new colour scheme

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 					<section>
 						<p>
-							Hi! I'm Achinth, a nineteen-year-old rising junior at the University
+							Hi! I'm Achinth, a twenty-year-old junior at the University
 							 of British Columbia studying computer science and statistics.
-							 I'm also an intern with Boeing in my hometown, Vancouver!
+							 I also was an intern with Boeing in my hometown, Vancouver!
 						</p>
 					</section>
 
@@ -160,7 +160,7 @@
 
 			<!-- section 3- experience -->
 			<section>
-				<header style="color:#e7ad52"> Where I've been! </header>
+				<header style="color:#d1b9da"> Where I've been! </header>
 
 
 				<section>
@@ -168,7 +168,7 @@
 					<img src="https://i.pinimg.com/originals/68/83/58/6883588c46d58007614c57109a9a5996.jpg"
 					style="width:75%;height:75%">
 
-				<p style="color:white"> I'm currently an intern with the digitial solutions and analytics
+				<p style="color:white"> I was an intern with the digitial solutions and analytics
 				team over at Boeing Vancouver. </p>
 
 				</section>
@@ -193,7 +193,7 @@
 			<section>
 
 				<section>
-					<p style="color:#e7ad52"> TypeMeNot </p>
+					<p style="color:#d1b9da"> TypeMeNot </p>
 					<p style="color:#FFFFFF"> Wolfram Award winner @ nwHacks 2020! </p>
 					<div class="row">
 
@@ -216,7 +216,7 @@
 				</section>
 
 				<section>
-					<p style="color:#e7ad52"> Footprint 🌳 </p>
+					<p style="color:#d1b9da"> Footprint 🌳 </p>
 					<p style="color:#FFFFFF"> UBC Launch Pad! </p>
 					<div class="row">
 
@@ -240,7 +240,7 @@
 				</section>
 
 				<section>
-					<p style="color:#e7ad52"> Predicting cervical cancer risk from lifestyle choices </p>
+					<p style="color:#d1b9da"> Predicting cervical cancer risk from lifestyle choices </p>
 					<p style="color:#FFFFFF"> (my first data science project!) </p>
 					<div class="row">
 
@@ -265,7 +265,7 @@
 				</section>
 
 					<section>
-						<p style="color:#e7ad52"> Chess on desktop </p>
+						<p style="color:#d1b9da"> Chess on desktop </p>
 						<p style="color:#FFFFFF"> (my first ever project!) </p>
 						<div class="row">
 
@@ -354,7 +354,7 @@
 					// normal options
 					selector: '.background',
 					maxParticles: 200,
-					color: '#cfb87c',
+					color: '#9663b1',
 					connectParticles: false,
 					sizeVariations: 5,
 					speed: 0.34,
@@ -386,10 +386,11 @@
  <script src='js/dist/core.js'></script>
  <script type="text/javascript">
 	 const instance = new Typewriter('#typewriter', {
-		 strings: ['<span class="wrapper" style="color:#e7ad52"><span class="span-1">Achinth.</span>',
-			 '<span class="wrapper" style="color:#e7ad52"><strong>an aspiring engineer.</strong></span>',
-			 '<span className="wrapper" style="color:#e7ad52"><strong>an ultimate player.</strong></span>',
-		 '<span class="wrapper" style="color:#e7ad52"><strong>an avid eater.</strong></span>'],
+		 strings: ['<span class="wrapper" style="color:#d1b9da"><span class="span-1">Achinth.</span>',
+			 '<span class="wrapper" style="color:#d1b9da"><strong>an aspiring engineer.</strong></span>',
+			 '<span className="wrapper" style="color:#d1b9da"><strong>an ultimate player.</strong></span>',
+		 '<span class="wrapper" style="color:#d1b9da"><strong>an avid eater.</strong></span>',
+	 '<span class="wrapper" style="color:#d1b9da"><strong>looking for work!</strong></span>'],
 		 autoStart: true,
 		 loop: true,
 	 });
