fix medium link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								  	></img>
 							</a>
 
-							<a href="https://medium.com/@bigdaddytwochinz"
+							<a href="https://abharadwaj.medium.com/"
 							style="padding:35px">
 								    <img
 										src="assets/medium-icon.png"
