--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/zenburn.css">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/favicon_io/favicon.ico">
 
 	<!-- Printing and PDF exports -->
 	<script>
